# website-unipr-fis-backend

./: .gitignore  README.md  pyproject.toml  server.sh
app/: auth.py  main.py  ricepurity.py
app/access/: .gitignore  __init__.py  admin.py  auth.py  gods.txt  users.py
app/memes/: archive.py
app/models/: user.py
app/routers/: __init__.py  users.py
