[project]
name = ""
version = ""
description = ""
authors = [
    {name = "RBerga06", email = "78449715+RBerga06@users.noreply.github.com"},
]
dependencies = [
    "fastapi>=0.105.0",
    "pydantic>=2.5.2",
    "sqlmodel>=0.0.14",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "uvicorn[standard]>=0.24.0.post1",
]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = {text = "AGPL-3.0-only"}
